# Soundboard

./: Cargo.toml  README.md
src/: audio.rs  config.rs  gui.rs  main.rs  sound.rs
