[package]
name = "soundboard"
version = "0.1.0"
edition = "2021"
description = "A simple, performant soundboard"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "persistence"] }
cpal = "0.15"
rodio = "0.20"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
